# metaprogramming-course

./: .clang-format  .gitignore  Dockerfile  README.md  codestyle.md  run_tests.sh  solutions.code-workspace
.devcontainer/: devcontainer.json
book/: bibliography.bib  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  hyphenation.tex  latexmkrc  main.tex  preamble.tex
course/lib/: assert.hpp
course/testing/: RegularityWitness.hpp  assert.hpp
examples/: .gitignore  CMakeLists.txt  loophole_ubiq.cpp
examples/src/: UniquePointer.cpp  constexpr_counter.cpp  oldtypelist.h  polymorphic_fun.cpp  tag_invoke.cpp  test.cpp  type_lists.cpp  typelist.hpp  vtable_fun.cpp
samples/sem1/: CMakeLists.txt  asdf.cpp  binarySearch.hpp  main.cpp
samples/sem2/: CMakeLists.txt  main.cpp
samples/sem3/: CMakeLists.txt  main.cpp  operations.hpp  typelist.hpp
samples/sem4/: function.hpp  main.cpp
samples/sem5/: CMakeLists.txt  any.hpp  main.cpp
samples/sem6/: main.cpp
samples/sem7/: main.cpp
samples/sem8/: any_object.hpp  main.cpp  shapes.hpp  tag_invoke.hpp
scripts/: .gitignore  README.md  all.sh  test.sh  util.sh
tasks/: .gitignore  CMakeLists.txt  README.md  rules.md  task0.md  task1.md  task2.md  task3.md  task4.md  task5.md  task6.md  task7.md  testing.md
tasks/annotations/: README.md
tasks/annotations/tests/: CMakeLists.txt  annotations.hpp  static.cpp  stress.cpp
tasks/enumerators/: README.md
tasks/enumerators/tests/: main.cpp  stress.cpp
tasks/intrusive_ptr/: README.md
tasks/intrusive_ptr/tests/: CMakeLists.txt  just_works.cpp  legacy.cpp  new.hpp  tests  weak.cpp
tasks/mapper/: README.md
tasks/mapper/tests/: main.cpp  tests  unsorted.cpp
tasks/slice/: README.md
tasks/slice/tests/: CMakeLists.txt  main.cpp
tasks/span/: README.md
tasks/span/tests/: main.cpp  tests
tasks/spy/: README.md
tasks/spy/tests/: main.cpp  mocks.hpp  sbo.cpp  static.cpp  tests
tasks/type_lists/: README.md
tasks/type_lists/tests/: CMakeLists.txt  type_lists.cpp  value_sequences.cpp
tests/: .gitignore  CMakeLists.txt  README.md
tests/include/commons/: assert.hpp  concepts.hpp  debug_trap.hpp  metafunctions.hpp
tests/task0/: main.cpp  tests
tests/task1/: CMakeLists.txt  group_by.cpp  main.cpp  nocompile.cpp  tests  type_lists.cpp  value_sequences.cpp
tests/task2/: CMakeLists.txt  main.cpp  nocompile.cpp  static.cpp  tests  unsorted.cpp
tests/task3/: CMakeLists.txt  group_by.cpp  main.cpp  managed_ops.hpp  mocks.hpp  static.cpp  tests  type_lists.cpp
tests/task4/: CMakeLists.txt  main.cpp  static.cpp  stress.cpp  tests  unsorted.cpp
tests/task5/: CMakeLists.txt  main.cpp  sbo.cpp  stress.cpp  tests
tests/task6/: CMakeLists.txt  main.cpp  tests
tests/task7/: annotations.hpp  stress.cpp  tests
